# grandscatter

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vite.config.ts
.github/workflows/: pages.yml  publish-pypi.yml
example/: index.html  z-order-test.html
examples/: clusters.html  eigs.html  index.html  mnist.html  mnist_pca.arrow  tour.html  z-order-test.html
python/: README.md  pyproject.toml
python/afm/: tsconfig.json  widget.css  widget.ts
python/examples/: example.ipynb
python/examples/.ipynb_checkpoints/: example-checkpoint.ipynb
python/grandscatter/: __init__.py
python/grandscatter/static/: widget.css  widget.js
python/notebooks/: README.md  example.py  example_wasm.py
src/: Emitter.ts  Lasso.ts  Legend.ts  Overlay.ts  Projection.ts  Scatterplot.ts  WebGLRenderer.ts  index.ts  linalg.ts  scales.ts  types.ts
src/shaders/: fragment.glsl.ts  vertex.glsl.ts
test/: lasso.test.ts  linalg.test.ts  projection.test.ts
