[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandscatter"
version = "0.1.0"
description = "Interactive multidimensional scatterplot Jupyter widget"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.21",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "traitlets>=5.14.3",
]

[dependency-groups]
dev = [
    "anywidget[dev]>=0.9.21",
    "watchfiles",
    "jupyterlab",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
only-packages = true
artifacts = ["grandscatter/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["grandscatter/static/widget.js"]
skip-if-exists = ["grandscatter/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "pnpm"
build_cmd = "build:widget"
path = ".."
