[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandscatter"
version = "0.1.0"
description = "Interactive multidimensional scatterplot Jupyter widget"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nezar Abdennur", email = "nabdennur@gmail.com" },
]
keywords = [
    "jupyter",
    "widget",
    "scatterplot",
    "visualization",
    "multidimensional",
    "grand-tour",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anywidget>=0.9.21",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "traitlets>=5.14.3",
]

[project.urls]
Homepage = "https://github.com/abdenlab/grandscatter"
Repository = "https://github.com/abdenlab/grandscatter"
"Bug Tracker" = "https://github.com/abdenlab/grandscatter/issues"

[dependency-groups]
dev = [
    "anywidget[dev]>=0.9.21",
    "watchfiles",
    "jupyterlab",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.build]
only-packages = true
artifacts = ["grandscatter/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["grandscatter/static/widget.js"]
skip-if-exists = ["grandscatter/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "pnpm"
build_cmd = "build:widget"
path = ".."
